--- a/Quiz/Base.lproj/Main.storyboard
+++ b/Quiz/Base.lproj/Main.storyboard
@@ -18,28 +18,96 @@
                         <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
                         <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                         <subviews>
-                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="WBH-iY-4eq">
-                                <rect key="frame" x="162" y="446" width="277" height="30"/>
+                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="gzP-sq-gsY">
+                                <rect key="frame" x="16" y="119" width="568" height="202"/>
+                                <subviews>
+                                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Dcf-5F-d38">
+                                        <rect key="frame" x="170" y="102" width="229" height="36"/>
+                                        <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="calibratedRGB"/>
+                                        <fontDescription key="fontDescription" type="boldSystem" pointSize="20"/>
+                                        <state key="normal" title="The Cups">
+                                            <color key="titleColor" red="1" green="0.14608379069999999" blue="0.15386665930000001" alpha="1" colorSpace="calibratedRGB"/>
+                                            <color key="titleShadowColor" white="0.5" alpha="1" colorSpace="calibratedWhite"/>
+                                        </state>
+                                        <connections>
+                                            <action selector="cupsPressed:" destination="vXZ-lx-hvc" eventType="touchUpInside" id="y0z-Fk-vR3"/>
+                                            <segue destination="ocJ-fP-23h" kind="showDetail" id="qAr-D0-map"/>
+                                        </connections>
+                                    </button>
+                                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Xmz-x1-IxW">
+                                        <rect key="frame" x="170" y="146" width="229" height="36"/>
+                                        <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="calibratedRGB"/>
+                                        <fontDescription key="fontDescription" type="boldSystem" pointSize="20"/>
+                                        <state key="normal" title="The League">
+                                            <color key="titleColor" red="1" green="0.14608379069999999" blue="0.15386665930000001" alpha="1" colorSpace="calibratedRGB"/>
+                                            <color key="titleShadowColor" white="0.5" alpha="1" colorSpace="calibratedWhite"/>
+                                        </state>
+                                        <connections>
+                                            <action selector="leaguePressed:" destination="vXZ-lx-hvc" eventType="touchUpInside" id="33L-vb-QQu"/>
+                                            <segue destination="ocJ-fP-23h" kind="showDetail" id="RBj-Xk-Gv6"/>
+                                        </connections>
+                                    </button>
+                                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="WBH-iY-4eq">
+                                        <rect key="frame" x="170" y="20" width="229" height="30"/>
+                                        <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="calibratedRGB"/>
+                                        <constraints>
+                                            <constraint firstAttribute="width" constant="229" id="4sA-Ia-UsG"/>
+                                            <constraint firstAttribute="height" constant="30" id="P9t-mY-aUL"/>
+                                        </constraints>
+                                        <fontDescription key="fontDescription" type="boldSystem" pointSize="20"/>
+                                        <state key="normal" title="General">
+                                            <color key="titleColor" red="1" green="0.14608379069999999" blue="0.15386665930000001" alpha="1" colorSpace="calibratedRGB"/>
+                                            <color key="titleShadowColor" white="0.5" alpha="1" colorSpace="calibratedWhite"/>
+                                        </state>
+                                        <connections>
+                                            <action selector="generalPressed:" destination="vXZ-lx-hvc" eventType="touchUpInside" id="kqc-r0-Zga"/>
+                                            <segue destination="ocJ-fP-23h" kind="showDetail" id="1GO-4H-Xhu"/>
+                                        </connections>
+                                    </button>
+                                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Rcv-O3-yuT">
+                                        <rect key="frame" x="170" y="58" width="229" height="36"/>
+                                        <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="calibratedRGB"/>
+                                        <fontDescription key="fontDescription" type="boldSystem" pointSize="20"/>
+                                        <state key="normal" title="Fergie Years">
+                                            <color key="titleColor" red="1" green="0.14608379069999999" blue="0.15386665930000001" alpha="1" colorSpace="calibratedRGB"/>
+                                            <color key="titleShadowColor" white="0.5" alpha="1" colorSpace="calibratedWhite"/>
+                                        </state>
+                                        <connections>
+                                            <action selector="fergiePressed:" destination="vXZ-lx-hvc" eventType="touchUpInside" id="l0m-Mt-Dsg"/>
+                                            <segue destination="ocJ-fP-23h" kind="showDetail" id="b6h-Wd-Czv"/>
+                                        </connections>
+                                    </button>
+                                </subviews>
+                                <color key="backgroundColor" cocoaTouchSystemColor="darkTextColor"/>
                                 <constraints>
-                                    <constraint firstAttribute="width" constant="277" id="aQ7-AZ-gfc"/>
+                                    <constraint firstItem="WBH-iY-4eq" firstAttribute="top" secondItem="gzP-sq-gsY" secondAttribute="top" constant="20" id="0OJ-vS-qEo"/>
+                                    <constraint firstItem="WBH-iY-4eq" firstAttribute="leading" secondItem="Xmz-x1-IxW" secondAttribute="leading" id="2sd-Jn-002"/>
+                                    <constraint firstItem="WBH-iY-4eq" firstAttribute="leading" secondItem="Dcf-5F-d38" secondAttribute="leading" id="8yt-0I-cym"/>
+                                    <constraint firstItem="WBH-iY-4eq" firstAttribute="trailing" secondItem="Xmz-x1-IxW" secondAttribute="trailing" id="9OG-5g-zTF"/>
+                                    <constraint firstItem="WBH-iY-4eq" firstAttribute="centerX" secondItem="gzP-sq-gsY" secondAttribute="centerX" id="Y9R-Ky-BjD"/>
+                                    <constraint firstItem="WBH-iY-4eq" firstAttribute="trailing" secondItem="Dcf-5F-d38" secondAttribute="trailing" id="ZJZ-BY-dDH"/>
+                                    <constraint firstItem="WBH-iY-4eq" firstAttribute="trailing" secondItem="Rcv-O3-yuT" secondAttribute="trailing" id="cxl-3X-inm"/>
+                                    <constraint firstItem="Dcf-5F-d38" firstAttribute="top" secondItem="Rcv-O3-yuT" secondAttribute="bottom" constant="8" symbolic="YES" id="nRl-by-vtg"/>
+                                    <constraint firstItem="Rcv-O3-yuT" firstAttribute="top" secondItem="WBH-iY-4eq" secondAttribute="bottom" constant="8" symbolic="YES" id="pcL-gk-uoG"/>
+                                    <constraint firstItem="Xmz-x1-IxW" firstAttribute="top" secondItem="Dcf-5F-d38" secondAttribute="bottom" constant="8" symbolic="YES" id="pvx-e7-eoV"/>
+                                    <constraint firstItem="WBH-iY-4eq" firstAttribute="leading" secondItem="Rcv-O3-yuT" secondAttribute="leading" id="tXr-TX-1Y3"/>
                                 </constraints>
-                                <state key="normal" title="Button">
-                                    <color key="titleShadowColor" white="0.5" alpha="1" colorSpace="calibratedWhite"/>
-                                </state>
-                                <connections>
-                                    <segue destination="ocJ-fP-23h" kind="showDetail" id="xUH-Xs-N9s"/>
-                                </connections>
-                            </button>
+                            </view>
                         </subviews>
-                        <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="calibratedWhite"/>
+                        <color key="backgroundColor" white="0.0" alpha="1" colorSpace="calibratedWhite"/>
                         <constraints>
-                            <constraint firstAttribute="centerX" secondItem="WBH-iY-4eq" secondAttribute="centerX" constant="-0.5" id="Jdy-It-PTr"/>
-                            <constraint firstItem="2fi-mo-0CV" firstAttribute="top" secondItem="WBH-iY-4eq" secondAttribute="bottom" constant="124" id="zYD-MG-SVv"/>
+                            <constraint firstItem="2fi-mo-0CV" firstAttribute="top" secondItem="gzP-sq-gsY" secondAttribute="bottom" constant="279" id="GUo-xD-YfQ"/>
+                            <constraint firstItem="gzP-sq-gsY" firstAttribute="trailing" secondItem="kh9-bI-dsS" secondAttribute="trailingMargin" id="KjI-UU-kIa"/>
+                            <constraint firstItem="gzP-sq-gsY" firstAttribute="leading" secondItem="kh9-bI-dsS" secondAttribute="leadingMargin" id="ka1-Tv-0rW"/>
+                            <constraint firstItem="gzP-sq-gsY" firstAttribute="top" secondItem="jyV-Pf-zRb" secondAttribute="bottom" constant="99" id="tfR-UV-bOq"/>
                         </constraints>
                     </view>
                     <navigationItem key="navigationItem" id="K5J-4Q-Kqm"/>
                     <connections>
-                        <outlet property="startQuizButton" destination="WBH-iY-4eq" id="MYW-1N-q5Y"/>
+                        <outlet property="fergieYearsButton" destination="Rcv-O3-yuT" id="8EV-oM-W4y"/>
+                        <outlet property="generalQuizButton" destination="WBH-iY-4eq" id="0Ua-yF-XaE"/>
+                        <outlet property="theCupsButton" destination="Dcf-5F-d38" id="5FN-b4-Q7A"/>
+                        <outlet property="theLeagueButton" destination="Xmz-x1-IxW" id="5ky-vu-td9"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="x5A-6p-PRh" sceneMemberID="firstResponder"/>
@@ -316,4 +384,7 @@
             <point key="canvasLocation" x="3193" y="24"/>
         </scene>
     </scenes>
+    <inferredMetricsTieBreakers>
+        <segue reference="qAr-D0-map"/>
+    </inferredMetricsTieBreakers>
 </document>
