added more sound keeping scores

--- a/Quiz/Base.lproj/Main.storyboard
+++ b/Quiz/Base.lproj/Main.storyboard
@@ -281,53 +281,115 @@
                         <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="ObJ-Yi-9BB">
-                                <rect key="frame" x="242" y="396" width="117" height="30"/>
+                            <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="pitch.png" translatesAutoresizingMaskIntoConstraints="NO" id="uGs-Su-Wte">
+                                <rect key="frame" x="-1" y="0.0" width="600" height="600"/>
                                 <constraints>
-                                    <constraint firstAttribute="width" constant="117" id="iwP-dC-LrY"/>
+                                    <constraint firstAttribute="height" relation="greaterThanOrEqual" constant="600" id="Mux-mM-IxY"/>
+                                    <constraint firstAttribute="width" relation="greaterThanOrEqual" constant="600" id="OC4-6h-1Nf"/>
+                                    <constraint firstAttribute="height" constant="600" id="rMo-PV-JVn"/>
+                                    <constraint firstAttribute="width" constant="600" id="x3S-ZC-fDt"/>
                                 </constraints>
-                                <state key="normal" title="Play Again">
-                                    <color key="titleShadowColor" white="0.5" alpha="1" colorSpace="calibratedWhite"/>
-                                </state>
-                                <connections>
-                                    <segue destination="y1X-oh-eoV" kind="showDetail" id="bIe-r3-vdD"/>
-                                </connections>
-                            </button>
+                            </imageView>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="KBX-E3-ePv">
-                                <rect key="frame" x="204" y="112" width="193" height="38"/>
+                                <rect key="frame" x="204" y="79" width="193" height="38"/>
                                 <constraints>
-                                    <constraint firstAttribute="width" constant="193" id="Qcg-iW-qok"/>
-                                    <constraint firstAttribute="height" constant="38" id="abv-ls-TZV"/>
+                                    <constraint firstAttribute="width" constant="193" id="BDH-nm-pks"/>
+                                    <constraint firstAttribute="height" constant="38" id="TIy-9R-rdJ"/>
                                 </constraints>
                                 <fontDescription key="fontDescription" type="boldSystem" pointSize="20"/>
                                 <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
                                 <nil key="highlightedColor"/>
                             </label>
-                            <textView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" editable="NO" textAlignment="center" translatesAutoresizingMaskIntoConstraints="NO" id="WhS-Wr-BTx">
-                                <rect key="frame" x="180" y="182" width="240" height="128"/>
-                                <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="rUL-gb-aa1">
+                                <rect key="frame" x="257" y="399" width="87" height="21"/>
                                 <constraints>
-                                    <constraint firstAttribute="width" constant="240" id="fG8-Ne-Cc6"/>
+                                    <constraint firstAttribute="width" constant="87" id="PdO-Oj-KMO"/>
+                                    <constraint firstAttribute="height" constant="21" id="WRn-YE-5LX"/>
                                 </constraints>
-                                <fontDescription key="fontDescription" type="boldSystem" pointSize="20"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="10"/>
+                                <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="YKZ-E8-vUc">
+                                <rect key="frame" x="257" y="428" width="87" height="21"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="10"/>
+                                <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="0MT-D7-0hc">
+                                <rect key="frame" x="257" y="457" width="87" height="21"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="21" id="v5u-Qc-Cuz"/>
+                                </constraints>
+                                <fontDescription key="fontDescription" type="system" pointSize="10"/>
+                                <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="LDm-Jr-xGx">
+                                <rect key="frame" x="257" y="486" width="87" height="21"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="10"/>
+                                <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                            <textView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" editable="NO" textAlignment="center" translatesAutoresizingMaskIntoConstraints="NO" id="WhS-Wr-BTx">
+                                <rect key="frame" x="136" y="144" width="326" height="69"/>
+                                <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
+                                <constraints>
+                                    <constraint firstAttribute="width" constant="326" id="F3G-M3-WjA"/>
+                                </constraints>
+                                <fontDescription key="fontDescription" type="boldSystem" pointSize="16"/>
                                 <textInputTraits key="textInputTraits" autocapitalizationType="sentences"/>
                             </textView>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="ObJ-Yi-9BB">
+                                <rect key="frame" x="256" y="249" width="86" height="101"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="101" id="qWl-nF-gX4"/>
+                                    <constraint firstAttribute="width" constant="86" id="tLm-Fz-7Dr"/>
+                                </constraints>
+                                <state key="normal" title="Play Again" image="football.png">
+                                    <color key="titleShadowColor" white="0.5" alpha="1" colorSpace="calibratedWhite"/>
+                                </state>
+                                <connections>
+                                    <action selector="playAgainPressed:" destination="0GU-DM-4By" eventType="touchUpInside" id="C1e-iR-k9p"/>
+                                    <segue destination="y1X-oh-eoV" kind="showDetail" id="bIe-r3-vdD"/>
+                                </connections>
+                            </button>
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                         <constraints>
-                            <constraint firstItem="fMW-RY-XYI" firstAttribute="top" secondItem="ObJ-Yi-9BB" secondAttribute="bottom" constant="174" id="6sm-F3-Ppb"/>
-                            <constraint firstItem="KBX-E3-ePv" firstAttribute="centerX" secondItem="WhS-Wr-BTx" secondAttribute="centerX" id="FtM-fw-wBd"/>
-                            <constraint firstItem="KBX-E3-ePv" firstAttribute="top" secondItem="rGr-on-qWi" secondAttribute="bottom" constant="92" id="JcV-GB-ysH"/>
-                            <constraint firstItem="WhS-Wr-BTx" firstAttribute="top" secondItem="KBX-E3-ePv" secondAttribute="bottom" constant="32" id="NLH-wp-KWx"/>
-                            <constraint firstAttribute="centerX" secondItem="ObJ-Yi-9BB" secondAttribute="centerX" constant="-0.5" id="hY3-cG-gsn"/>
-                            <constraint firstItem="KBX-E3-ePv" firstAttribute="centerX" secondItem="ObJ-Yi-9BB" secondAttribute="centerX" id="oYj-N3-V0h"/>
-                            <constraint firstItem="ObJ-Yi-9BB" firstAttribute="top" secondItem="WhS-Wr-BTx" secondAttribute="bottom" constant="86" id="swS-AR-hAY"/>
+                            <constraint firstItem="uGs-Su-Wte" firstAttribute="leading" secondItem="8GT-yl-3zl" secondAttribute="leadingMargin" constant="-17" id="3Il-Q6-5sK"/>
+                            <constraint firstItem="YKZ-E8-vUc" firstAttribute="top" secondItem="rUL-gb-aa1" secondAttribute="bottom" constant="8" symbolic="YES" id="3ii-9m-22T"/>
+                            <constraint firstItem="rUL-gb-aa1" firstAttribute="top" secondItem="ObJ-Yi-9BB" secondAttribute="bottom" constant="49" id="7FC-Tl-EjY"/>
+                            <constraint firstItem="0MT-D7-0hc" firstAttribute="top" secondItem="YKZ-E8-vUc" secondAttribute="bottom" constant="8" symbolic="YES" id="7Hw-kI-LQD"/>
+                            <constraint firstItem="rUL-gb-aa1" firstAttribute="trailing" secondItem="YKZ-E8-vUc" secondAttribute="trailing" id="CGY-Kf-dAu"/>
+                            <constraint firstItem="rUL-gb-aa1" firstAttribute="trailing" secondItem="0MT-D7-0hc" secondAttribute="trailing" id="Cyz-vQ-Ohk"/>
+                            <constraint firstItem="uGs-Su-Wte" firstAttribute="top" secondItem="8GT-yl-3zl" secondAttribute="top" id="DIp-Ch-mxQ"/>
+                            <constraint firstItem="LDm-Jr-xGx" firstAttribute="top" secondItem="0MT-D7-0hc" secondAttribute="bottom" constant="8" symbolic="YES" id="DvI-L0-O1t"/>
+                            <constraint firstItem="ObJ-Yi-9BB" firstAttribute="top" secondItem="WhS-Wr-BTx" secondAttribute="bottom" constant="36" id="FZh-md-LL4"/>
+                            <constraint firstItem="LDm-Jr-xGx" firstAttribute="leading" secondItem="0MT-D7-0hc" secondAttribute="leading" id="IPP-2g-5tc"/>
+                            <constraint firstItem="fMW-RY-XYI" firstAttribute="top" secondItem="LDm-Jr-xGx" secondAttribute="bottom" constant="93" id="Lo2-Tk-uAc"/>
+                            <constraint firstItem="uGs-Su-Wte" firstAttribute="bottom" secondItem="fMW-RY-XYI" secondAttribute="top" id="NaN-Uk-Rfb"/>
+                            <constraint firstItem="rUL-gb-aa1" firstAttribute="centerX" secondItem="8GT-yl-3zl" secondAttribute="centerX" id="TCn-AX-E9z"/>
+                            <constraint firstItem="rUL-gb-aa1" firstAttribute="leading" secondItem="YKZ-E8-vUc" secondAttribute="leading" id="XFj-4b-0Mo"/>
+                            <constraint firstItem="rUL-gb-aa1" firstAttribute="leading" secondItem="0MT-D7-0hc" secondAttribute="leading" id="XIT-75-GrT"/>
+                            <constraint firstItem="LDm-Jr-xGx" firstAttribute="trailing" secondItem="0MT-D7-0hc" secondAttribute="trailing" id="baA-Iv-tMr"/>
+                            <constraint firstItem="ObJ-Yi-9BB" firstAttribute="centerX" secondItem="uGs-Su-Wte" secondAttribute="centerX" id="bqI-EJ-xUX"/>
+                            <constraint firstItem="ObJ-Yi-9BB" firstAttribute="top" secondItem="8GT-yl-3zl" secondAttribute="top" constant="249" id="h9e-QV-cyn"/>
+                            <constraint firstItem="ObJ-Yi-9BB" firstAttribute="centerX" secondItem="WhS-Wr-BTx" secondAttribute="centerX" id="j4p-w6-urQ"/>
+                            <constraint firstAttribute="bottom" secondItem="0MT-D7-0hc" secondAttribute="bottom" constant="122" id="miJ-h5-4nl"/>
+                            <constraint firstItem="rUL-gb-aa1" firstAttribute="centerX" secondItem="KBX-E3-ePv" secondAttribute="centerX" id="oy1-fH-ZSj"/>
+                            <constraint firstItem="WhS-Wr-BTx" firstAttribute="top" secondItem="KBX-E3-ePv" secondAttribute="bottom" constant="27" id="t7f-4H-MnC"/>
+                            <constraint firstItem="KBX-E3-ePv" firstAttribute="top" secondItem="rGr-on-qWi" secondAttribute="bottom" constant="59" id="xZM-AH-3x3"/>
                         </constraints>
                     </view>
                     <navigationItem key="navigationItem" id="U3M-TN-xaZ"/>
                     <connections>
+                        <outlet property="averageScoreLabel" destination="YKZ-E8-vUc" id="lli-rg-cLs"/>
                         <outlet property="correctAnswersLabel" destination="KBX-E3-ePv" id="dqG-27-GVn"/>
+                        <outlet property="highScoreLabel" destination="rUL-gb-aa1" id="RYC-5u-GoU"/>
                         <outlet property="messageTextView" destination="WhS-Wr-BTx" id="nXb-80-zQ8"/>
+                        <outlet property="totalGamesLabel" destination="0MT-D7-0hc" id="UUN-aL-0Wo"/>
+                        <outlet property="totalScoreLabel" destination="LDm-Jr-xGx" id="4dv-do-Cih"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="X7N-Dd-2rb" userLabel="First Responder" sceneMemberID="firstResponder"/>
@@ -392,6 +454,10 @@
             <point key="canvasLocation" x="3193" y="24"/>
         </scene>
     </scenes>
+    <resources>
+        <image name="football.png" width="218" height="219"/>
+        <image name="pitch.png" width="394" height="599"/>
+    </resources>
     <inferredMetricsTieBreakers>
         <segue reference="qAr-D0-map"/>
     </inferredMetricsTieBreakers>
